# POC-Tracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  demo.env.example  docker-compose.yml  prod.env.example  pyproject.toml
.claude/: launch.json
.github/workflows/: publish-image.yml
alembic/versions/: 0001_initial_schema.py  0002_add_salesforce_opp_url.py  0003_add_use_case_completed_on.py  0004_add_project_notes.py  0005_add_note_attachments.py  0006_add_use_case_view_prefs.py  0007_add_user_theme.py  0008_add_user_display_name.py  0009_add_notebook_url.py  0010_add_rich_text_notes.py  0011_add_backup_runs.py  0012_add_search_index.py  0013_add_project_grants.py  0014_add_ai_providers.py  0015_add_exec_summary_tokens.py  0016_add_poc_instance_url.py  0017_add_library_sets.py  0018_library_set_default.py  0019_add_brand_tagline.py  0020_add_mcp_gateway_tokens.py  0021_add_task_manager.py  0022_add_google_tasks_sync.py  0023_add_internal_only.py  0024_add_smtp_config.py  0025_add_user_invites.py  0026_add_external_user_expiry.py  0027_add_poc_templates.py  0028_add_project_share_links.py  0029_add_login_lockout.py  0030_add_project_category_orders.py  0031_add_project_type.py  0032_add_sidebar_collapsed.py  0033_add_win_loss_outcome.py  0034_add_milestones.py  0035_add_feedback.py  0036_add_regions.py  0037_add_user_manager_role.py  0038_add_user_regions.py  0039_add_project_region.py  0040_add_region_enforcement_flag.py
app/: __init__.py  config.py  db.py  main.py  mcp_server.py
app/models/: __init__.py  ai_provider.py  app_branding.py  app_config.py  app_user.py  auth_provider.py  backup_run.py  close_reason.py  contact.py  contact_role.py  customer.py  dashboard_pref.py  feedback.py  (+34 more)
docs/: API.md  BRANDING.md  GOOGLE_TASKS_SYNC.md  INVITATIONS.md  NEW_POC_WIZARD.md  POSTGRES.md  READOUT.md  RELEASING.md  REQUIREMENTS.md  SCHEMA.md  TASKS.md  poc-tracker-architecture.pptx  questlog-teaser.html  rbac-region-plan.md
tests/: conftest.py  test_access_control.py  test_ai_followups.py  test_ai_phase2.py  test_ai_salesforce_update.py  test_ai_summaries.py  test_api_docs.py  test_api_keys.py  test_audit.py  test_backups.py  test_bulk_use_cases.py  test_category_order_and_tasks.py  test_customer_logo.py  test_dashboard_insights.py  test_demo_data.py  test_email.py  test_external_expiry.py  test_google_connect_logging.py  test_google_sync.py  test_identity_source.py  test_invitations.py  test_login_lockout.py  test_mcp.py  test_milestones.py  test_notes_api.py  test_oauth.py  test_poc_api.py  test_poc_templates.py  test_poc_wizard.py  test_portal.py  test_profile.py  test_readout_deck.py  test_region_admin.py  test_rich_text.py  test_search.py  test_session_auth.py  test_setup_banners.py  test_task_api.py  test_ui.py  test_use_case_io.py  (+2 more)
(+159 files in other folders)
