[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poc-tracker"
version = "0.1.0"
description = "POC Tracker — track proof-of-concept engagements: customers, projects, use cases, and reporting, with a REST API and MCP access."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "tmanmidwest" }]
keywords = ["poc", "sales-engineering", "presales", "rest-api", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Office/Business",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.4",
    "itsdangerous>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "authlib>=1.3.2",
    "weasyprint>=63",
    "nh3>=0.2.18",
    "pyzipper>=0.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
mcp = [
    "mcp>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/tmanmidwest/POC-Tracker"
Repository = "https://github.com/tmanmidwest/POC-Tracker"
Issues = "https://github.com/tmanmidwest/POC-Tracker/issues"

[project.scripts]
poct-reset-admin = "app.scripts.reset_admin_password:main"
poct-mcp = "app.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["templates/**/*.html", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "N806"]
"app/services/seed_data.py" = ["N806"]
"app/main.py" = ["N806"]
"app/scripts/*" = ["N806"]
"alembic/versions/*" = ["E501", "N999"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
